[package]
name = "testcat"
version = "0.2.0"
edition = "2021"
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
license = "MIT"
description = "Macros for writing more readable tests"
repository = "https://github.com/JosephLenton/testcat"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.14"

[dev-dependencies]
pretty_assertions = "1.0.0"
