[package]
name = "testcat"
version = "1.1.1"
edition = "2021"
keywords = ["testing", "tests", "test", "unit", "jest"]
categories = ["development-tools", "development-tools::testing"]
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
license = "MIT"
description = "Macros for writing more readable tests"
repository = "https://github.com/JosephLenton/testcat"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.14"

[dev-dependencies]
pretty_assertions = "1.0.0"
