[package]
name = "testcat"
version = "2.1.0"
edition = "2021"
keywords = ["testing", "tests", "test", "unit", "jest"]
categories = ["development-tools", "development-tools::testing"]
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
license = "MIT"
description = "Macros for writing more readable tests"
repository = "https://github.com/JosephLenton/testcat"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["parsing"] }

[dev-dependencies]
pretty_assertions = "1.4"
